--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@
 /* 
     Fonts
 */
-
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 /* 
     Variables
 */
@@ -21,10 +21,11 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+    font-family: 'Roboto', sans-serif;
 }
 
 body {
-
+    background-color: white;
 }
 
 a,ul {
