--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,6 +35,33 @@ a,ul {
 /*
     Class Selector
 */
+.logo {
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    font-weight: bold;
+}
+
+.menu {
+    text-transform: uppercase;
+    padding: 2px;
+    background-color: black;
+}
+
+.menu a {
+    padding: 10px;
+    color: white;
+}
+  
+.menu a:hover {
+    background-color: #f20;
+}
+  
+.nav {
+    max-height: 0;
+    transition: max-height .5s ease-out;
+}
 
 .wrapper {
     max-width: 30rem;
@@ -47,7 +74,6 @@ a,ul {
 
 }
 
-@media screen (min-width: ) and (max-width: )
-{
-    
+main {
+    display: block;
 }
