--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,50 +18,36 @@
 */
 
 * {
-    box-sizing: border-box;
     padding: 0;
     margin: 0;
-    font-family: 'Roboto', sans-serif;
 }
 
 body {
+    color: #1d1d1f;
     background-color: white;
+    
+    direction: ltr;
+    text-align: left;
+
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 1rem;
+    font-weight: 400;
+    font-style: normal;
 }
 
-a,ul {
-    text-decoration: none;
+header {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: auto;
+    background-color: blue;
+
 }
 
 /*
     Class Selector
 */
-.logo {
-    padding-left: 5px;
-    padding-right: 5px;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    font-weight: bold;
-}
-
-.menu {
-    text-transform: uppercase;
-    padding: 2px;
-    background-color: black;
-}
-
-.menu a {
-    padding: 10px;
-    color: white;
-}
-  
-.menu a:hover {
-    background-color: #f20;
-}
-  
-.nav {
-    max-height: 0;
-    transition: max-height .5s ease-out;
-}
 
 .wrapper {
     max-width: 30rem;
@@ -72,8 +58,4 @@ a,ul {
     padding-left: 0.625rem;
     padding-right: 0.625rem;
 
-}
-
-main {
-    display: block;
 }
