--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,10 +39,19 @@ header {
     position: absolute;
     top: 0;
     left: 0;
+    min-height: fit-content;
     width: 100%;
     height: auto;
     background-color: blue;
 
+}
+
+ul {
+    list-style: none;
+}
+
+a {
+    text-decoration: none;
 }
 
 /*
