--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,11 +42,11 @@ header {
     min-height: fit-content;
     width: 100%;
     height: auto;
-    background-color: blue;
+    background-color: black;
 
 }
 
-ul {
+li {
     list-style: none;
 }
 
@@ -62,9 +62,12 @@ a {
     max-width: 30rem;
 
     margin-left: auto;
-    margin-left: auto;
+    margin-right: auto;
 
-    padding-left: 0.625rem;
-    padding-right: 0.625rem;
+    padding-left: 5px;
+    padding-right: 5px;
+
+    min-width: 20rem;
+    max-width: 64rem;
 
 }
