--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,16 +58,88 @@ a {
     Class Selector
 */
 
-.wrapper {
-    max-width: 30rem;
 
-    margin-left: auto;
-    margin-right: auto;
-
-    padding-left: 5px;
-    padding-right: 5px;
-
-    min-width: 20rem;
-    max-width: 64rem;
-
-}
+@media (min-width: 1281px) {
+    .wrapper {    
+        margin-left: auto;
+        margin-right: auto;
+    
+        padding-left: 5px;
+        padding-right: 5px;
+    
+        min-width: 1281px;
+    
+    }
+  }
+  
+  
+  @media (min-width: 1025px) and (max-width: 1280px) {
+    .wrapper {    
+        margin-left: auto;
+        margin-right: auto;
+    
+        padding-left: 5px;
+        padding-right: 5px;
+    
+        min-width: 1025px;
+        max-width: 1280px;
+    
+    }
+  }
+  
+  @media (min-width: 768px) and (max-width: 1024px) {
+    .wrapper {    
+        margin-left: auto;
+        margin-right: auto;
+    
+        padding-left: 5px;
+        padding-right: 5px;
+    
+        min-width: 768px;
+        max-width: 1024px;
+    
+    }
+  }
+  
+  @media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
+    .wrapper {    
+        margin-left: auto;
+        margin-right: auto;
+    
+        padding-left: 5px;
+        padding-right: 5px;
+    
+        min-width: 768px;
+        max-width: 1024px;
+    
+    }
+  }
+  
+  @media (min-width: 481px) and (max-width: 767px) {
+    .wrapper {    
+        margin-left: auto;
+        margin-right: auto;
+    
+        padding-left: 5px;
+        padding-right: 5px;
+    
+        min-width: 481px;
+        max-width: 767px;
+    
+    }
+    
+  }
+  
+  @media (min-width: 320px) and (max-width: 480px) {
+    .wrapper {    
+        margin-left: auto;
+        margin-right: auto;
+    
+        padding-left: 5px;
+        padding-right: 5px;
+    
+        min-width: 320px;
+        max-width: 480px;
+    
+    }
+  }
