--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,14 +28,9 @@
 body {
     color: #1d1d1f;
     background-color: white;
-    
     direction: ltr;
     text-align: left;
-
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 1rem;
-    font-weight: 400;
-    font-style: normal;
 }
 
 header {
@@ -48,130 +43,68 @@ header {
 
 ul {
     list-style-type: none;
-    margin: 0;
-    padding: 0;
     display: block;
     background-color: #333;
+    position: sticky;
 }
 
 li {
-    padding-left: 1rem;
     list-style: none;
     float: left;
 }
 
 li a {
-    display: block;
     color: white;
     text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
+    padding: 8px;
     display: block;
     text-decoration: none;
     text-transform: uppercase;
-    position: sticky;
 }
 
 li a:hover {
     background-color: #111;
 }
 
-.active {
-    background-color: #04AA6D;
+.wrapper {
+    margin: 0 auto;
 }
-
 
 /*
     Class Selector
-*/
+*/ 
 
-@media (min-width: 1281px) {
-
-    .wrapper {    
-        margin-left: auto;
-        margin-right: auto;
-    
-        padding-left: 5px;
-        padding-right: 5px;
-    
-        min-width: 1281px;
-    
-    }
-  }
-  
-  
 @media (min-width: 1025px) and (max-width: 1280px) {
 
     .wrapper {    
-        margin-left: auto;
-        margin-right: auto;
-    
-        padding-left: 5px;
-        padding-right: 5px;
-    
-        min-width: 1025px;
         max-width: 1280px;
-    
     }
   }
   
 @media (min-width: 768px) and (max-width: 1024px) {
 
     .wrapper {    
-        margin-left: auto;
-        margin-right: auto;
-    
-        padding-left: 5px;
-        padding-right: 5px;
-    
-        min-width: 768px;
         max-width: 1024px;
-    
     }
   }
   
 @media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
 
     .wrapper {    
-        margin-left: auto;
-        margin-right: auto;
-    
-        padding-left: 5px;
-        padding-right: 5px;
-    
-        min-width: 768px;
         max-width: 1024px;
-    
     }
   }
   
 @media (min-width: 481px) and (max-width: 767px) {
 
     .wrapper {    
-        margin-left: auto;
-        margin-right: auto;
-    
-        padding-left: 5px;
-        padding-right: 5px;
-    
-        min-width: 481px;
         max-width: 767px;
-    
     }
-    
   }
   
 @media (min-width: 320px) and (max-width: 480px) {
 
-    .wrapper {    
-        margin-left: auto;
-        margin-right: auto;
-    
-        padding-left: 5px;
-        padding-right: 5px;
-    
-        min-width: 320px;
+    .wrapper {
         max-width: 480px;
-    
     }
   }
